--- a/src/components/SocialsBar.astro
+++ b/src/components/SocialsBar.astro
@@ -7,7 +7,7 @@ import BaseIcon from "./BaseIcon.astro";
     href="https://www.facebook.com/luca.pontrandolfo"
     target="_blank"
     rel="noopener noreferrer"
-    class="text-gray-500 hover:text-gray-900 dark:hover:text-white"
+    class="text-gray-500 hover:text-gray-900"
   >
     <BaseIcon name="ic:baseline-facebook" title="Facebook page" />
   </a>
@@ -15,7 +15,7 @@ import BaseIcon from "./BaseIcon.astro";
     href="https://www.instagram.com/lucapontrandolfo/"
     target="_blank"
     rel="noopener noreferrer"
-    class="text-gray-500 hover:text-gray-900 dark:hover:text-white"
+    class="text-gray-500 hover:text-gray-900"
   >
     <BaseIcon name="mdi:instagram" title="Instagram page" />
   </a>
@@ -23,7 +23,7 @@ import BaseIcon from "./BaseIcon.astro";
     href="https://www.artstation.com/pontrandolfo"
     target="_blank"
     rel="noopener noreferrer"
-    class="text-gray-500 hover:text-gray-900 dark:hover:text-white"
+    class="text-gray-500 hover:text-gray-900"
   >
     <BaseIcon name="mdi:artstation" title="Artstation page" />
   </a>
@@ -31,7 +31,7 @@ import BaseIcon from "./BaseIcon.astro";
     href="https://artaporter.it/artista/luca-pontrandolfo/"
     target="_blank"
     rel="noopener noreferrer"
-    class="text-gray-500 hover:text-gray-900 dark:hover:text-white"
+    class="text-gray-500 hover:text-gray-900"
   >
     <BaseIcon name="artaporter" title="Artaporter page" sizes={5} />
   </a>
@@ -39,7 +39,7 @@ import BaseIcon from "./BaseIcon.astro";
     href="https://www.premioceleste.it/ita_artista_news/idu:176/"
     target="_blank"
     rel="noopener noreferrer"
-    class="text-gray-500 hover:text-gray-900 dark:hover:text-white no-underline"
+    class="text-gray-500 hover:text-gray-900 no-underline"
   >
     <strong class="text-lg font-extrabold align-middle">C,</strong>
   </a>
