--- a/src/components/GalleryTurinSeries/GalleryTurinSeries.index.astro
+++ b/src/components/GalleryTurinSeries/GalleryTurinSeries.index.astro
@@ -4,22 +4,13 @@ import GalleryTurinSeriesGroup2 from "./GalleryTurinSeriesGroup2.astro";
 import GalleryTurinSeriesGroup3 from "./GalleryTurinSeriesGroup3.astro";
 import GalleryTurinSeriesGroup4 from "./GalleryTurinSeriesGroup4.astro";
 import ContainerGalleries from "../ContainerGalleries.astro";
-import "../../styles/masonry.css";
 ---
 
 <ContainerGalleries>
-  <div class="row">
-    <div class="column">
-      <GalleryTurinSeriesGroup1 />
-    </div>
-    <div class="column">
-      <GalleryTurinSeriesGroup2 />
-    </div>
-    <div class="column">
-      <GalleryTurinSeriesGroup3 />
-    </div>
-    <div class="column">
-      <GalleryTurinSeriesGroup4 />
-    </div>
+  <div class="columns-3xs xl:columns-4">
+    <GalleryTurinSeriesGroup1 />
+    <GalleryTurinSeriesGroup2 />
+    <GalleryTurinSeriesGroup3 />
+    <GalleryTurinSeriesGroup4 />
   </div>
 </ContainerGalleries>
