--- a/src/components/TimelineListItem.astro
+++ b/src/components/TimelineListItem.astro
@@ -3,10 +3,9 @@ import BaseIcon from "./BaseIcon.astro";
 export interface Props {
   exhibitionName: string;
   location: string;
-  date?: string;
 }
 
-const { exhibitionName, location, date } = Astro.props as Props;
+const { exhibitionName, location } = Astro.props as Props;
 ---
 
 <li class="mb-10 ml-6">
@@ -24,10 +23,6 @@ const { exhibitionName, location, date } = Astro.props as Props;
     <h3 class="flex items-center text-lg font-semibold text-gray-900">
       {exhibitionName}
     </h3>
-    <!-- <time
-    class="block mb-2 text-sm font-normal leading-none text-gray-400 "
-    >{date}
-  </time> -->
     <h4 class="mb-4 text-base font-normal text-gray-500">
       {location}
     </h4>
