changed default p margins

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -3,6 +3,7 @@ import { routes } from "../utils/constants.mjs";
 import Avatar from "./Avatar.astro";
 import NavbarDropdownItem from "./NavbarDropdownItem.astro";
 import NavbarItem from "./NavbarItem.astro";
+
 export interface Props {
   currentRoute: string;
 }
@@ -11,7 +12,7 @@ const { currentRoute } = Astro.props as Props;
 ---
 
 <nav
-  class="bg-white px-2 sm:px-4 py-2.5 dark:bg-gray-900 fixed w-full z-20 top-0 left-0 border-b border-gray-200 dark:border-gray-600 shadow-lg"
+  class="bg-white px-2 sm:px-4 py-2.5 fixed w-full z-20 top-0 left-0 border-b border-gray-200 shadow-lg"
 >
   <div class="flex flex-wrap justify-between items-center mx-auto max-w-5xl">
     <header>
@@ -28,7 +29,7 @@ const { currentRoute } = Astro.props as Props;
       <button
         data-collapse-toggle="navbar-sticky"
         type="button"
-        class="inline-flex items-center p-2 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+        class="inline-flex items-center p-2 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"
         aria-controls="navbar-sticky"
         aria-expanded="false"
       >
@@ -52,7 +53,7 @@ const { currentRoute } = Astro.props as Props;
       id="navbar-sticky"
     >
       <ul
-        class="flex flex-col items-center p-4 xl:pr-0 mt-4 bg-gray-50 rounded-lg border border-gray-100 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
+        class="flex flex-col items-center p-4 xl:pr-0 mt-4 bg-gray-50 rounded-lg border border-gray-100 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 md:bg-white"
       >
         <NavbarItem
           text="Home"
@@ -69,7 +70,7 @@ const { currentRoute } = Astro.props as Props;
               currentRoute === "Turin Series"
                 ? "text-slate-800"
                 : ""
-            } md:hover:text-slate-800 md:p-0 md:w-auto dark:text-gray-400 dark:hover:text-white dark:focus:text-white dark:border-gray-700 dark:hover:bg-gray-700 md:dark:hover:bg-transparent`}
+            } md:hover:text-slate-800 md:p-0 md:w-auto `}
             >Collections
             <svg
               class="ml-1 w-5 h-5"
@@ -86,10 +87,10 @@ const { currentRoute } = Astro.props as Props;
           </button>
           <div
             id="dropdownNavbar"
-            class="hidden z-10 w-44 font-normal bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700 dark:divide-gray-600"
+            class="hidden z-10 w-44 font-normal bg-white rounded divide-y divide-gray-100 shadow"
           >
             <ul
-              class="py-1 text-sm text-gray-700 dark:text-gray-400"
+              class="py-1 text-sm text-gray-700"
               aria-labelledby="dropdownLargeButton"
             >
               <NavbarDropdownItem
