--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -61,34 +61,34 @@ const { currentRoute } = Astro.props as Props;
           isActive={currentRoute === "Homepage"}
         />
         <li>
-          <button
-            id="dropdownNavbarLink"
-            data-dropdown-toggle="dropdownNavbar"
-            class={`flex justify-between items-center py-2 pr-4 pl-3 w-full format leading-none rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 ${
-              currentRoute === "Paintings" ||
-              currentRoute === "Venice Series" ||
-              currentRoute === "Turin Series"
-                ? "text-slate-800"
-                : ""
-            } md:hover:text-slate-800 md:p-0 md:w-auto `}
-            >Collections
-            <svg
-              class="ml-1 w-5 h-5"
-              aria-hidden="true"
-              fill="currentColor"
-              viewBox="0 0 20 20"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
-                clip-rule="evenodd"></path>
-            </svg>
-          </button>
           <div
             id="dropdownNavbar"
-            class="hidden z-10 w-44 font-normal bg-white rounded divide-y divide-gray-100 shadow"
+            class="w-44 font-normal bg-white rounded divide-y divide-gray-100 shadow overflow-hidden closed"
           >
+            <button
+              id="dropdownNavbarLink"
+              data-dropdown-toggle="dropdownNavbar"
+              class={`flex justify-between items-center py-2 pr-4 pl-3 w-full format leading-none rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 ${
+                currentRoute === "Paintings" ||
+                currentRoute === "Venice Series" ||
+                currentRoute === "Turin Series"
+                  ? "text-slate-800"
+                  : ""
+              } md:hover:text-slate-800 md:p-0 md:w-auto `}
+              >Collections
+              <svg
+                class="ml-1 w-5 h-5"
+                aria-hidden="true"
+                fill="currentColor"
+                viewBox="0 0 20 20"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+                  clip-rule="evenodd"></path>
+              </svg>
+            </button>
             <ul
               class="py-1 text-sm text-gray-700"
               aria-labelledby="dropdownLargeButton"
@@ -125,3 +125,8 @@ const { currentRoute } = Astro.props as Props;
     </div>
   </div>
 </nav>
+<style>
+  .overflow-hidden.closed ul {
+    height: 0;
+  }
+</style>
