better page descriptions

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,6 +31,8 @@ const { title, description, endpoint } = Astro.props as Props;
       colorScheme="light"
       themeColor="#000000"
       keywords={[
+        "Luca",
+        "Pontrandolfo",
         "website",
         "portfolio",
         "art",
