--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,7 +3,7 @@ import ContainerTexts from "../components/ContainerTexts.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="404" description="Pagina non trovata.">
+<Layout title="404" description="Page not found.">
   <ContainerTexts>
     <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
       <div class="mx-auto max-w-screen-sm text-center">
