--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,7 +7,7 @@ import { routes } from "../utils/constants.mjs";
 
 <Layout
   title="About"
-  description="Biografia e intenzioni di Luca Pontrandolfo."
+  description="Biography and intentions of Luca Pontrandolfo."
   endpoint={routes.ABOUT}
 >
   <ContainerTexts>
