--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -8,7 +8,7 @@ import ContainerTexts from "../components/ContainerTexts.astro";
 
 <Layout
   title="Contacts"
-  description="Contatti di Luca Pontrandolfo."
+  description="Contacts of Luca Pontrandolfo."
   endpoint={routes.CONTACTS}
 >
   <ContainerTexts>
