--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import { routes } from "../utils/constants.mjs";
 
 <Layout
   title="Homepage"
-  description="Galleria d'arte digitale dell'autore Luca Pontrandolfo."
+  description="Digital art gallery of the author Luca Pontrandolfo."
   endpoint={routes.INDEX}
 >
   <ContentPointer />
