--- a/src/pages/paintings.astro
+++ b/src/pages/paintings.astro
@@ -6,7 +6,7 @@ import { routes } from "../utils/constants.mjs";
 
 <Layout
   title="Paintings"
-  description="Galleria di opere dell'autore raffiguranti quadri pitturati a mano."
+  description="Gallery of works by the author depicting hand-painted paintings."
   endpoint={routes.PAINTINGS}
 >
   <GalleryPaintingsSeries />
