--- a/src/pages/turin-series.astro
+++ b/src/pages/turin-series.astro
@@ -6,7 +6,7 @@ import { routes } from "../utils/constants.mjs";
 
 <Layout
   title="Turin Series"
-  description="Galleria di opere dell'autore raffiguranti fotografie di Venezia modificate digitalmente."
+  description="Gallery of works by the author depicting digitally modified photographs of Venice."
   endpoint={routes.TURIN}
 >
   <GalleryTurinSeries />
