added loading lazy to picture props

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,7 @@ const { title, description, endpoint } = Astro.props as Props;
     <meta name="generator" content={Astro.generator} />
     <link rel="manifest" href="/manifest.json" />
     <Seo
-      title={`Luca Pontrandolfo - ${title}`}
+      title={`Luca Pontrandolfo | ${title}`}
       description={description}
       icon="/favicon.ico"
       colorScheme="light"
