--- a/src/components/LandingHero.astro
+++ b/src/components/LandingHero.astro
@@ -9,6 +9,7 @@ import HeroText from "./HeroText.astro";
   objectPosition="80% 80%"
   {...sharedPictureProps}
   loading="eager"
+  fadeInTransition={false}
   artDirectives={[
     {
       media: "(min-aspect-ratio: 3/2)",
