--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -60,21 +60,18 @@ const { currentRoute } = Astro.props as Props;
           href={routes.INDEX}
           isActive={currentRoute === "Homepage"}
         />
-        <li>
-          <div
-            id="dropdownNavbar"
-            class="w-44 font-normal bg-white rounded divide-y divide-gray-100 shadow overflow-hidden closed"
-          >
+        <li class="min-w-[5rem] min-h-[1.2rem]">
+          <div id="dropdownNavbar" class="overflow-hidden closed absolute">
             <button
               id="dropdownNavbarLink"
               data-dropdown-toggle="dropdownNavbar"
-              class={`flex justify-between items-center py-2 pr-4 pl-3 w-full format leading-none rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 ${
+              class={`flex justify-between items-center hover:bg-gray-100 md:hover:bg-transparent md:border-0 format leading-none ${
                 currentRoute === "Paintings" ||
                 currentRoute === "Venice Series" ||
                 currentRoute === "Turin Series"
                   ? "text-slate-800"
                   : ""
-              } md:hover:text-slate-800 md:p-0 md:w-auto `}
+              } md:hover:text-slate-800`}
               >Collections
               <svg
                 class="ml-1 w-5 h-5"
@@ -90,7 +87,7 @@ const { currentRoute } = Astro.props as Props;
               </svg>
             </button>
             <ul
-              class="py-1 text-sm text-gray-700"
+              class="text-sm text-gray-700 rounded bg-white"
               aria-labelledby="dropdownLargeButton"
             >
               <NavbarDropdownItem
