--- a/src/components/NavbarDropdownItem.astro
+++ b/src/components/NavbarDropdownItem.astro
@@ -8,13 +8,8 @@ export interface Props {
 const { text, href, isActive } = Astro.props as Props;
 ---
 
-<li>
-  <a
-    href={href}
-    rel="prefetch"
-    class={`block py-2 px-4 ${
-      isActive ? "bg-gray-100" : ""
-    } format leading-none hover:hover:bg-gray-100`}
+<li class="pl-4 pr-8 py-3 hover:bg-gray-100 font-normal rounded">
+  <a href={href} rel="prefetch" class={`format leading-none hover:bg-gray-100`}
     >{text}
   </a>
 </li>
