changed Layout with Base

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,9 +1,9 @@
 ---
 import ContainerTexts from "../components/ContainerTexts.astro";
-import Layout from "../layouts/Layout.astro";
+import Base from "../layouts/Base.astro";
 ---
 
-<Layout title="404" description="Page not found.">
+<Base title="404" description="Page not found.">
   <ContainerTexts>
     <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
       <div class="mx-auto max-w-screen-sm text-center">
@@ -24,4 +24,4 @@ import Layout from "../layouts/Layout.astro";
       </div>
     </div>
   </ContainerTexts>
-</Layout>
+</Base>
