configured absolute paths

--- a/src/components/Avatar.astro
+++ b/src/components/Avatar.astro
@@ -1,6 +1,6 @@
 ---
 import { Picture } from "astro-imagetools/components";
-import { sharedPictureProps } from "../utils/sharedPictureProps";
+import { sharedPictureProps } from "@utils/sharedPictureProps";
 ---
 
 <div class="w-10 h-10 rounded-full overflow-hidden">
