--- a/src/components/LandingHero.astro
+++ b/src/components/LandingHero.astro
@@ -1,6 +1,6 @@
 ---
-import { sharedPictureProps } from "../utils/sharedPictureProps";
 import { BackgroundPicture } from "astro-imagetools/components";
+import { sharedPictureProps } from "@utils/sharedPictureProps";
 import HeroText from "./HeroText.astro";
 ---
 
