--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,5 +1,5 @@
 ---
-import { routes } from "../utils/constants.mjs";
+import { routes } from "@utils/constants.mjs";
 import Avatar from "./Avatar.astro";
 import NavbarDropdownItem from "./NavbarDropdownItem.astro";
 import NavbarItem from "./NavbarItem.astro";
@@ -19,7 +19,7 @@ const { currentRoute } = Astro.props as Props;
       <a href={routes.INDEX} class="flex items-center" rel="prefetch">
         <Avatar />
         <div class="ml-4">
-          <h1 class="format self-center text-2xl text-gray-700 dark:text-white">
+          <h1 class="format self-center text-2xl text-gray-700">
             Luca Pontrandolfo
           </h1>
         </div>
