--- a/src/components/PictureWrapper.astro
+++ b/src/components/PictureWrapper.astro
@@ -1,6 +1,6 @@
 ---
 import { Picture } from "astro-imagetools/components";
-import { sharedPictureProps } from "../utils/sharedPictureProps";
+import { sharedPictureProps } from "@utils/sharedPictureProps";
 import "../styles/imagesOverlayEffect.css";
 export interface Props {
   src: string;
