--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,6 +1,6 @@
 ---
-import ContainerTexts from "../components/ContainerTexts.astro";
-import Base from "../layouts/Base.astro";
+import ContainerTexts from "@components/ContainerTexts.astro";
+import Base from "@layouts/Base.astro";
 ---
 
 <Base title="404" description="Page not found.">
