--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,8 @@
 ---
-import ContainerTexts from "../components/ContainerTexts.astro";
-import TimelineListItem from "../components/TimelineListItem.astro";
-import Base from "../layouts/Base.astro";
-import { routes } from "../utils/constants.mjs";
+import ContainerTexts from "@components/ContainerTexts.astro";
+import TimelineListItem from "@components/TimelineListItem.astro";
+import Base from "@layouts/Base.astro";
+import { routes } from "@utils/constants.mjs";
 ---
 
 <Base
