--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -1,9 +1,9 @@
 ---
-import Base from "../layouts/Base.astro";
 import { Icon } from "astro-icon";
-import SocialsBar from "../components/SocialsBar.astro";
-import { routes } from "../utils/constants.mjs";
-import ContainerTexts from "../components/ContainerTexts.astro";
+import SocialsBar from "@components/SocialsBar.astro";
+import ContainerTexts from "@components/ContainerTexts.astro";
+import { routes } from "@utils/constants.mjs";
+import Base from "@layouts/Base.astro";
 ---
 
 <Base
