--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import Base from "../layouts/Base.astro";
-import MainGallery from "../components/MainGallery.astro";
-import LandingHero from "../components/LandingHero.astro";
-import ContentPointer from "../components/ContentPointer.astro";
-import { routes } from "../utils/constants.mjs";
+import Base from "@layouts/Base.astro";
+import MainGallery from "@components/MainGallery.astro";
+import LandingHero from "@components/LandingHero.astro";
+import ContentPointer from "@components/ContentPointer.astro";
+import { routes } from "@utils/constants.mjs";
 ---
 
 <Base
