--- a/src/pages/paintings.astro
+++ b/src/pages/paintings.astro
@@ -1,7 +1,7 @@
 ---
-import GalleryPaintingsSeries from "../components/GalleryPaintingsSeries/GalleryPaintingsSeries.index.astro";
-import Base from "../layouts/Base.astro";
-import { routes } from "../utils/constants.mjs";
+import GalleryPaintingsSeries from "@components/GalleryPaintingsSeries/GalleryPaintingsSeries.index.astro";
+import Base from "@layouts/Base.astro";
+import { routes } from "@utils/constants.mjs";
 ---
 
 <Base
