--- a/src/pages/turin-series.astro
+++ b/src/pages/turin-series.astro
@@ -1,7 +1,7 @@
 ---
-import GalleryTurinSeries from "../components/GalleryTurinSeries/GalleryTurinSeries.index.astro";
-import Base from "../layouts/Base.astro";
-import { routes } from "../utils/constants.mjs";
+import GalleryTurinSeries from "@components/GalleryTurinSeries/GalleryTurinSeries.index.astro";
+import Base from "@layouts/Base.astro";
+import { routes } from "@utils/constants.mjs";
 ---
 
 <Base
