--- a/src/pages/venice-series.astro
+++ b/src/pages/venice-series.astro
@@ -1,7 +1,7 @@
 ---
-import GalleryVeniceSeries from "../components/GalleryVeniceSeries/GalleryVeniceSeries.index.astro";
-import Base from "../layouts/Base.astro";
-import { routes } from "../utils/constants.mjs";
+import GalleryVeniceSeries from "@components/GalleryVeniceSeries/GalleryVeniceSeries.index.astro";
+import Base from "@layouts/Base.astro";
+import { routes } from "@utils/constants.mjs";
 ---
 
 <Base
