subsetted custom font

--- a/src/components/HeroText.astro
+++ b/src/components/HeroText.astro
@@ -6,3 +6,13 @@
     <div class="font-normal">PORTFOLIO</div>
   </h2>
 </div>
+<style>
+  @font-face {
+    font-family: "playfair_display";
+    src: url("/fonts/playfairdisplay-variablefont_wght.woff2") format("woff2"),
+      url("/fonts/playfairdisplay-variablefont_wght.woff") format("woff");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+  }
+</style>
