--- a/src/components/HeroText.astro
+++ b/src/components/HeroText.astro
@@ -1,9 +1,14 @@
 <div class="ml-8 md:ml-16 lg:ml-20 2xl:ml-28 pt-32 lg:pt-[10%]">
-  <h2
-    class="text-white format font-['Playfair_Display'] text-4xl md:text-5xl lg:text-6xl xl:text-7xl 2xl:text-[9rem] leading-none"
-  >
-    <strong class="font-black">LUCA <br /> PONTRANDOLFO</strong>
-    <div class="font-normal">PORTFOLIO</div>
+  <h2 class="text-white format font-['Playfair_Display'] leading-none">
+    <strong
+      class="font-black text-4xl md:text-5xl lg:text-6xl xl:text-7xl 2xl:text-[9rem]"
+      >LUCA <br /> PONTRANDOLFO</strong
+    >
+    <div
+      class="font-normal text-3xl md:text-4xl lg:text-5xl xl:text-6xl 2xl:text-[7rem]"
+    >
+      PORTFOLIO
+    </div>
   </h2>
 </div>
 <style>
